Web Inspector: Network: Error response headers summary has wrong color border https://bugs.webkit.org/show_bug.cgi?id=201538 <rdar://problem/55104469>
Reviewed by Devin Rousso.

* UserInterface/Views/ResourceHeadersContentView.css:
(body[dir] .resource-headers > section.error > .details):
Re-apply an error style for resource-header sections.


Canonical link: https://commits.webkit.org/215170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249570 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ResourceHeadersContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ResourceHeadersContentView.css
@@ -27,6 +27,10 @@ body[dir] .resource-headers > section.summary > .details {
     border-color: var(--network-system-color);
 }
 
+body[dir] .resource-headers > section.error > .details {
+    border-color: var(--network-error-color);
+}
+
 body[dir] .resource-headers > section:matches(.redirect, .headers) > .details {
     border-color: var(--network-header-color);
 }
